[package]
name = "bvdl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
ureq = { version = "2.9.6", features = ["gzip", "json", "proxy-from-env", "socks-proxy"] }
