[package]
name = "bvdl"
version = "0.1.0"
edition = "2021"

authors = ["Joel Koen <mail@joelkoen.com>"]
license = "MIT"
description = "Scrape product information from Bazaarvoice"
readme = "README.md"
repository = "https://github.com/joelkoen/bvdl"
keywords = ["scraper"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["gzip", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
